packages/next-swc/crates/next-custom-transforms/tests/errors/next-dynamic/too-many-arguments/output.js
import dynamic from 'next/dynamic';
const DynamicComponentWithCustomLoading = dynamic(()=>import('../components/hello'), {
    loading: ()=><p>...</p>
}, '3rd');
